<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.vanderbilt.isis.triage.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="647dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.02"
            android:src="@drawable/ic_launcher" android:contentDescription="TODO"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.02" >

            <TextView
                android:id="@+id/welcomeMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeMsg"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.02" >

            <TextView
                android:id="@+id/welcomeSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeSub"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.02" >

            <Button
                android:id="@+id/beginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.02"
                android:text="@string/beginButton" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
